Update Java version to Java 17